--- a/templates/ggmap.html
+++ b/templates/ggmap.html
@@ -20,13 +20,9 @@
   <div class="header-top">
     <div class="header-bottom">
       <div class="logo myLogo">
-        <h1><a href="/">SIGFOX</a></h1>
+        <h1><a href="/">WS POS</a></h1>
       </div>
       <div class="top-nav myTop" id="mainHeader">
-        <input type="button" id="mylink" class="btn btn-evento btn-registrar" data-dismiss="modal" value="5 movs" onclick="movs()">
-        <button type="submit" class="btn btn-evento btn-registrar" data-dismiss="modal" value="startSomething">General</button>
-        <button type="submit" class="btn btn-evento btn-registrar" data-dismiss="modal" value="startSomething">Especifico</button>
-
       </div>
       <!---->
       <div class="clearfix"> 
